package pt.ipp.isep.dei.esoft.project.domain.locations;

/**
 * The type City.
 */
public class City extends Location {

    /**
     * Empty Constructor
     */
    public City(){
      super();
    }
}
